WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252188
`&` should not be considered a pseudo-class internally
https://bugs.webkit.org/show_bug.cgi?id=252188
Summary
`&` should not be considered a pseudo-class internally
Tim Nguyen (:ntim)
Reported
2023-02-13 13:22:42 PST
The nesting selector is not a pseudo class.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-28 11:57:20 PDT
<
rdar://problem/107328044
>
Matthieu Dubet
Comment 2
2023-06-21 07:04:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15143
EWS
Comment 3
2023-06-26 02:21:00 PDT
Committed
265509@main
(c6b7717a83e7): <
https://commits.webkit.org/265509@main
> Reviewed commits have been landed. Closing PR #15143 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug