Source/WebCore/css/parser/CSSParserImpl.cpp
@@ -569,8 +569,7 @@ void CSSParserImpl::runInNewNestingContext(auto&& run)
 Ref<StyleRuleBase> CSSParserImpl::createNestingParentRule()
 {
     CSSSelector nestingParentSelector;
-    nestingParentSelector.setMatch(CSSSelector::Match::PseudoClass);
-    nestingParentSelector.setPseudoClassType(CSSSelector::PseudoClassType::PseudoClassNestingParent);
+    nestingParentSelector.setMatch(CSSSelector::Match::NestingParent);
     auto parserSelector = makeUnique<CSSParserSelector>(nestingParentSelector);
     Vector<std::unique_ptr<CSSParserSelector>> selectorList;
     selectorList.append(WTFMove(parserSelector));
